# pdf-extraction-kit

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: golden.json  run.py
examples/: batch_invoice_processor.py  walkthrough.md
fixtures/: contract-001.pdf.txt  contract-002.pdf.txt  invoice-001.pdf.txt  invoice-002.pdf.txt  statement-001.pdf.txt  statement-002.pdf.txt
src/pdfkit/: __init__.py  cli.py  extractor.py  pdf_reader.py  schemas.py
tests/: test_extractor.py  test_pdf_reader.py  test_schemas.py
